# rules_ts

examples/: package.json
examples/js_lib/: BUILD.bazel
examples/mixed_sources/: BUILD.bazel  main.ts  tsconfig.json
examples/mixed_sources/lib/: BUILD.bazel  lib1.js  lib1.ts  lib2.js  tsconfig.json
examples/mixed_sources/lib/nested/: BUILD.bazel  nested.js  tsconfig.json
ts/: proto.bzl
ts/private/: ts_proto_library.bzl
