load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

ts_project(
    name = "ts",
    srcs = ["main.ts", "//examples/mixed_sources/lib:lib", "//examples/mixed_sources/lib:lib2"],
    declaration = True,
    out_dir = "dist",
    allow_js = True,
)

ts_project(
    name = "entry",
    srcs = ["entry.ts"],
    declaration = True,
    out_dir = "dist",
    allow_js = True,
    deps = [
        ":ts",
    ],
)

js_binary(
    name = "bin",
    entry_point = ":entry",
    data = [":ts", ":entry"],
)