load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")

js_library(
    name = "main",
    types = ["main.ts"],
    deps = [
        "//examples/mixed_sources/lib:lib"
    ],
)

ts_project(
    name = "entry",
    srcs = ["entry.ts"],
    declaration = True,
    out_dir = "dist",
    allow_js = True,
    deps = [
        ":main",
    ],
    data = [
        ":main",
    ]
)

js_binary(
    name = "bin",
    entry_point = ":entry",
    data = [":entry"],
)