"""Example of a library that contains both typescript and javascript sources"""

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")

ts_project(
    name = "lib",
    srcs = ["lib1.ts", "//examples/mixed_sources/lib/nested"],
    declaration = True,
    allow_js = True,
    out_dir = "dist",
    deps = ["//examples/mixed_sources/lib/nested"],
    visibility = ["//examples/mixed_sources:__subpackages__"],
)

js_library(
    name = "lib2",
    srcs = ["lib2.js"],
    visibility = ["//examples/mixed_sources:__subpackages__"],
)