"""Example of a library that contains both typescript and javascript sources"""

load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "lib",
    types = ["lib1.ts", "lib2.js"],
    deps = ["//examples/mixed_sources/lib/nested"],
    visibility = ["//examples/mixed_sources:__subpackages__"],
)