"""Example of a library that contains both typescript and javascript sources"""

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")

ts_project(
    name = "lib",
    srcs = ["lib1.ts"],
    data = ["package.json"],
    declaration = True,
    visibility = ["//examples/mixed_sources:__subpackages__"],
)

js_library(
    name = "lib2",
    types = ["lib2.js"],
    data = ["package.json"],
    visibility = ["//examples/mixed_sources:__subpackages__"],
)